deploy/k8s/infra/consul/middleware-add-ui-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: consul-add-ui-prefix
  namespace: myapp
spec:
  addPrefix:
    prefix: /ui
