deploy/k8s/infra/consul/middleware-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: consul-strip-prefix
  namespace: myapp
spec:
  stripPrefix:
    prefixes:
      - /consul
