deploy/k8s/infra/consul/ingress-ui-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-ui-api-ingress
  namespace: myapp
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.priority: "260"
    traefik.ingress.kubernetes.io/router.middlewares: myapp-consul-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dev.example.com
      secretName: dev-myapp-io-tls
  rules:
    - host: dev.example.com
      http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: consul
                port:
                  number: 8500
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: consul
                port:
                  number: 8500
